# rustametrics

./: Cargo.toml  README.md
examples/: foo.rs
src/: cli.rs  document.rs  errors.rs  lib.rs  metrics.rs  parser.rs  performance.rs  report.rs  utils.rs
