[package]
name = "rustametrics"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
criterion = "0.4"
petgraph = "0.6"
walkdir = "2.3"
regex = "1.7"
thiserror = "1.0.63"

[[example]]
name= "foo"
